Call FeatureLayer.refresh()  before querying in order to avoid getting cached results

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <h2 id="title">Feature List</h2>
 {{esri-map registerAs=esriMap}}
 <h2>Assignments</h2>
-
+{{updateCount}}
 <table>
   <tbody>
     {{#each assignments as |assignment|}}
